Fixed profile detail overlapping

--- a/fire_sale/static/css/main.css
+++ b/fire_sale/static/css/main.css
@@ -237,6 +237,7 @@
 .action .menu {
     display: flex;
     position: absolute;
+    z-index: 5;
     justify-content: center;
     flex-wrap: wrap;
     right: 0em;
